# AdventCalendar

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
env/: toolchain.toml
src/: Day1.rs  Day2.rs  Day3.rs  main.rs
src/Day1/: d1p1.rs  d1p2.rs  p1.rs  p2.rs
src/Day2/: d2.rs  d2p1.rs
src/Day3/: d3.rs
