[package]
name = "advent_calendar"
version = "0.1.0"
edition = "2021"
description = "My Advent of Code stuff"
authors = ["Eero Lampela"]
homepage = "https://github.com/OreoLamp/AdventCalendar"
readme = "README.md"
license-file = "LICENSE"

[build]
target-dir = "../build"
rustflags = [
    "--all-targets",
    "--verbose",
    "-C debuginfo=2 instrument_coverage linker-flavor=ld.lld linker-plugin-lto=yes lto=yes opt-level=3 prefer-dynamic remark=all strip=symbols target-cpu=native",
]
