[package]
name = "advent_calendar"
version = "0.1.0"
edition = "2021"
description = "My Advent of Code stuff"
authors = ["Eero Lampela"]
homepage = "https://github.com/OreoLamp/AdventCalendar"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
aho-corasick = "1.1.2"
evcxr = "0.16.0"
evcxr_repl = "0.16.0"

[[bin]]
name = "advent_calendar"
path = "src/main.rs"
